[package]
name = "rust-2021-fundamentals"
version = "0.1.0"
edition = "2021"

[lib]
name = "wbc"
path = "src/lib.rs"

#name = "wbc"
#path = "src/lib_module.rs"

[[bin]]
name = "rust-2021-fundamentals"
path = "src/main.rs"

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[dev-dependencies]
tempdir = "0.3.7"
